package interceptors

//Routes - map of gRPC routes and their authorization levels
var Routes = map[string]string{
	"/Recipe/GetAllRecipes":    "public",
	"/Recipe/CreateRecipe":     "admin",
	"/Recipe/GetRecipe":        "public",
	"/Recipe/UpdateRecipe":     "admin",
	"/Recipe/DeleteRecipe":     "admin",
	"/Quote/GetAllQuotes":      "public",
	"/Quote/CreateQuote":       "admin",
	"/Quote/GetQuote":          "public",
	"/Quote/UpdateQuote":       "admin",
	"/Quote/DeleteQuote":       "admin",
	"/Quote/GetAllProjects":    "public",
	"/Quote/CreateProject":     "admin",
	"/Quote/GetProject":        "public",
	"/Quote/UpdateProject":     "admin",
	"/Quote/DeleteProject":     "admin",
	"/Quote/GetAllBlogs":       "public",
	"/Quote/CreateBlog":        "admin",
	"/Quote/GetBlog":           "public",
	"/Quote/UpdateBlog":        "admin",
	"/Quote/DeleteBlog":        "admin",
	"/Quote/GetAllOpenSources": "public",
	"/Quote/CreateOpenSource":  "admin",
	"/Quote/GetOpenSource":     "public",
	"/Quote/UpdateOpenSource":  "admin",
	"/Quote/DeleteOpenSource":  "admin",
	"/User/RegisterUser":       "admin",
	"/User/LoginUser":          "public",
	"/User/ForgotUser":         "public",
	"/User/VerifyEmailUser":    "public",
	"/User/GetAllUsers":        "admin",
	"/User/GetUser":            "admin",
	"/User/UpdateUser":         "admin",
	"/User/DeleteUser":         "admin",
	"/User/VerifyTokenUser":    "public",
	"/Contact/CreateContact":   "public",
}
